# alectra

./: .gitignore  .replit  PLAY_STORE.md  design_guidelines.md  package-lock.json  package.json  replit.md
attached_assets/: 0_build-android_1773393678795.txt  Pasted-Beyond-the-basics-bringing-innovation-to-every-entryway_1765486811637.txt  Pasted-Hero-Section-Top-Fold-Clean-bold-banner-with-your-strongest-selling-point-Example-South-Afri-1762937965509_1762937965512.txt  Pasted-How-the-Android-AAB-Build-Works-The-Core-Idea-The-app-i_1773358794674.txt  Pasted-How-to-Sign-an-Android-AAB-for-Google-Play-Step-1-Creat_1773400053821.txt  Pasted-Use-efficient-cache-lifetimes-A-long-cache-lifetime-can_1769063126367.txt  alectra_12-dec-2025_orphan-page-(has-no-incom_2025-12-12_21-48_1765569060396.csv
client/: index.html
scripts/: bulk-migrate-products.sh  check-production-db.ts  dev-database-export.json  expand-descriptions.ts  export-dev-database.ts  fix-categorization-exact.ts  fix-categorization-final.ts  fix-categorization.ts  merge-gate-motor-categories.ts  migrate-all-products.ts  migrate-products.ts  optimize-images.ts  pregenerate-images.ts  product-data.json  scrape-alectra-products.ts  seed-all-blog-posts.ts  seed-production.ts  seed-reviews.ts  update-descriptions.ts  update-final-descriptions.ts  update-more-descriptions.ts  update-prices-from-website.ts  update-product-descriptions.ts  update-remaining-descriptions.ts  update-short-descriptions.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/src/: lib.rs  main.rs
(+80 files in other folders)
