[package]
name = "alectra"
version = "1.0.0"
description = "Alectra Solutions - Security & Automation Products"
edition = "2021"

[lib]
name = "alectra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
